# zk-fuzz-lab

./: .build_phase5.sh  .gitignore  .test_fuzz_arithmetic.sh  .test_fuzz_io_echo.sh  Cargo.toml  LICENSE  Makefile  README.md  STATUS_QUO.md  smoke.ps1
adapters/sp1_guest/: README.md
adapters/sp1_guest/arithmetic_guest/: Cargo.toml
adapters/sp1_guest/arithmetic_guest/src/: main.rs
adapters/sp1_guest/fib_guest/: Cargo.toml
adapters/sp1_guest/fib_guest/src/: main.rs
adapters/sp1_guest/io_echo_guest/: Cargo.toml
adapters/sp1_guest/io_echo_guest/src/: main.rs
adapters/sp1_guest/panic_test_guest/: Cargo.toml
adapters/sp1_guest/panic_test_guest/src/: main.rs
adapters/sp1_guest/simple_struct_guest/: Cargo.toml
adapters/sp1_guest/simple_struct_guest/src/: main.rs
adapters/sp1_guest/timeout_test_guest/: Cargo.toml
adapters/sp1_guest/timeout_test_guest/src/: main.rs
artifacts/: README.md
ci/: README.md
generators/rustgen/: README.md
generators/rvgen/: README.md
guest/cores/: README.md
guest/cores/arithmetic/: Cargo.toml  README.md
guest/cores/arithmetic/src/: lib.rs
guest/cores/fib/: Cargo.toml  README.md
guest/cores/fib/src/: lib.rs
guest/cores/io_echo/: Cargo.toml  README.md
guest/cores/io_echo/src/: lib.rs
guest/cores/panic_test/: Cargo.toml  README.md
guest/cores/panic_test/src/: lib.rs
guest/cores/simple_struct/: Cargo.toml  README.md
guest/cores/simple_struct/src/: lib.rs
guest/cores/timeout_test/: Cargo.toml  README.md
guest/cores/timeout_test/src/: lib.rs
harness/: Cargo.toml  README.md
harness/src/: main.rs
inputs/: README.md  arithmetic_add_normal.json  arithmetic_add_overflow.json  arithmetic_div_by_zero.json  arithmetic_div_normal.json  arithmetic_mul_normal.json  arithmetic_mul_overflow.json  arithmetic_sub_normal.json  arithmetic_sub_underflow.json  fib_24.json  io_echo_100kb.json  io_echo_1kb.json  panic_no.json  panic_yes.json  simple_struct_empty.json  simple_struct_long.json  simple_struct_normal.json  simple_struct_unicode.json  timeout_finite.json  timeout_infinite.json
mutators/source_mut/: Cargo.toml  README.md
mutators/source_mut/src/: lib.rs
mutators/trace_mut/: README.md
oracles/riscv_eq/: README.md
oracles/rust_eq/: Cargo.toml  README.md
oracles/rust_eq/src/: lib.rs
oracles/spec_violations/: README.md
runners/native/: Cargo.toml  README.md
runners/native/src/: main.rs
runners/sp1/: Cargo.toml  README.md
runners/sp1/src/: main.rs
scripts/: README.md  build_sp1_guests.sh
