[workspace]
resolver = "2"
members = [
    "guest/cores/fib",
    "guest/cores/panic_test",
    "guest/cores/timeout_test",
    "guest/cores/io_echo",
    "guest/cores/arithmetic",
    "guest/cores/simple_struct",
    "runners/native",
    "runners/sp1",
    "oracles/rust_eq",
    "harness",
    "mutators/source_mut",
]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"

