[package]
name = "harness"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "harness"
path = "src/main.rs"

[dependencies]
rust-eq-oracle = { path = "../oracles/rust_eq" }
source-mutator = { path = "../mutators/source_mut" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
chrono = "0.4"
csv = "1.3"

