[package]
name = "native-runner"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "native-runner"
path = "src/main.rs"

[dependencies]
fib-core = { path = "../../guest/cores/fib" }
panic-test-core = { path = "../../guest/cores/panic_test" }
timeout-test-core = { path = "../../guest/cores/timeout_test" }
rust-eq-oracle = { path = "../../oracles/rust_eq" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
clap = { version = "4.5", features = ["derive"] }

