[package]
name = "arithmetic-guest"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
arithmetic-core = { path = "../../../guest/cores/arithmetic" }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
sp1-zkvm = "4.0.0"

[[bin]]
name = "arithmetic-guest"
path = "src/main.rs"

