[package]
name = "fib-guest"
version = "0.1.0"
edition = "2021"

[workspace]
# Empty workspace makes this a standalone package (required for SP1 guests)

[dependencies]
fib-core = { path = "../../../guest/cores/fib" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sp1-zkvm = "5.2.2"

