[package]
name = "simple-struct-guest"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
simple-struct-core = { path = "../../../guest/cores/simple_struct" }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
sp1-zkvm = "4.0.0"

[[bin]]
name = "simple-struct-guest"
path = "src/main.rs"

