[package]
name = "timeout-test-guest"
version = "0.1.0"
edition = "2021"

[workspace]
# Empty workspace makes this a standalone package (required for SP1 guests)

[dependencies]
timeout-test-core = { path = "../../../guest/cores/timeout_test" }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
sp1-zkvm = "5.2"

